--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         </style>
 
         <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+        <script src="javascripts/app.js"></script>
     </head>
 
     <body style="margin : 0px; overflow: hidden;">
