--- a/index.html
+++ b/index.html
@@ -1,34 +1,14 @@
 <html>
     <head>
-      <title>RE</title>
-      <link rel="stylesheet" href="/stylesheets/style.css">
+        <title>RE</title>
+        <link rel="stylesheet" href="/stylesheets/style.css">
         <meta aframe-injected="" name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,shrink-to-fit=no,user-scalable=no,minimal-ui,viewport-fit=cover">
         <meta aframe-injected="" name="mobile-web-app-capable" content="yes">
         <meta aframe-injected="" name="theme-color" content="black">
 
-        <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script>
-
-        <style>
-          .arjs-loader {
-            height: 100%;
-            width: 100%;
-            position: absolute;
-            top: 0;
-            left: 0;
-            background-color: rgba(0, 0, 0, 0.8);
-            z-index: 9999;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-          }
-
-          .arjs-loader div {
-            text-align: center;
-            font-size: 1.25em;
-            color: white;
-          }
-        </style>
-
+        <!--script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script-->
+        <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+        <script src="https://rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
         <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
     </head>
 
@@ -45,7 +25,7 @@
         arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;"
       >
         <!-- we use cors proxy to avoid cross-origin problems -->
-        <a-nft
+        <!--a-nft
           type="nft"
           url="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/trex-image/trex"
           smooth="true"
@@ -54,13 +34,14 @@
           smoothThreshold="5"
           emitevents="true"
         >
-          <a-entity
-            gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
-            scale="5 5 5"
-            position="50 150 0"
-          >
-          </a-entity>
-        </a-nft>
+            <a-entity
+              gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
+              scale="5 5 5"
+              position="50 150 0"
+            >
+            </a-entity>
+        </a-nft-->
+        <a-entity fbx-model=”src: url(/images/CUBE.fbx);”></a-entity>
         <a-entity camera></a-entity>
       </a-scene>
     </body>
