--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
     <head>
         <title>RE</title>
         <link rel="stylesheets" href="style.css">
-        <link rel="images" href="CUBE.fbx">
         <meta aframe-injected="" name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,shrink-to-fit=no,user-scalable=no,minimal-ui,viewport-fit=cover">
         <meta aframe-injected="" name="mobile-web-app-capable" content="yes">
         <meta aframe-injected="" name="theme-color" content="black">
@@ -13,7 +12,7 @@
         <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
     </head>
 
-    <body style="margin : 0px; overflow: hidden;">
+    <body>
       <!-- minimal loader shown until image descriptors are loaded -->
       <div class="arjs-loader">
         <div>Loading, please wait...</div>
