--- a/index.html
+++ b/index.html
@@ -26,23 +26,21 @@
         arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;"
       >
         <!-- we use cors proxy to avoid cross-origin problems -->
-        <!--a-nft
+        <a-nft
           type="nft"
-          url="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/trex-image/trex"
           smooth="true"
           smoothCount="10"
           smoothTolerance=".01"
           smoothThreshold="5"
           emitevents="true"
         >
-            <a-entity
+            <!--a-entity
               gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
               scale="5 5 5"
               position="50 150 0"
-            >
-            </a-entity>
-        </a-nft-->
-        <a-entity fbx-model=”src: url(/images/CUBE.fbx);”></a-entity>
+            ></a-entity-->
+            <a-entity fbx-model=”src: url(/images/CUBE.fbx);”></a-entity>
+        </a-nft>
         <a-entity camera></a-entity>
       </a-scene>
     </body>
