--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <!-- we use cors proxy to avoid cross-origin problems -->
         <a-nft
           type="nft"
+          url="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.image-tracking/nft/trex/trex-image/trex"
           smooth="true"
           smoothCount="10"
           smoothTolerance=".01"
