--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>RE</title>
         <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
         <link rel="preload"    as="image"      href="images/CUBE.fbx">
+        <link rel="preload"    as="image"      href="images/CUBE.gltf">
         <meta aframe-injected="" name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,shrink-to-fit=no,user-scalable=no,minimal-ui,viewport-fit=cover">
         <meta aframe-injected="" name="mobile-web-app-capable" content="yes">
         <meta aframe-injected="" name="theme-color" content="black">
@@ -40,7 +41,7 @@
               scale="5 5 5"
               position="50 150 0"
             ></a-entity-->
-            <a-entity fbx-model=”src: url(/images/CUBE.fbx);”></a-entity>
+            <a-entity fbx-model=”src: url(/images/CUBE.gltf);”></a-entity>
         </a-nft>
         <a-entity camera></a-entity>
       </a-scene>
