--- a/index.html
+++ b/index.html
@@ -41,7 +41,13 @@
               scale="5 5 5"
               position="50 150 0"
             ></a-entity-->
-            <a-entity gltf-model=”src: url(/images/CUBE.gltf);”></a-entity>
+            <a-entity
+                gltf-model=”src: url(/images/CUBE.gltf);”
+                id="drone"
+                position="50 150 0"
+                scale="5 5 5"
+            >
+            </a-entity>
         </a-nft>
         <a-entity camera></a-entity>
       </a-scene>
