--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
         <link rel="preload"    as="image"      href="images/CUBE.fbx">
         <link rel="preload"    as="image"      href="images/CUBE.gltf">
+        <link rel="preload"    as="image"      href="images/busterDrone.gltf">
         <meta aframe-injected="" name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,shrink-to-fit=no,user-scalable=no,minimal-ui,viewport-fit=cover">
         <meta aframe-injected="" name="mobile-web-app-capable" content="yes">
         <meta aframe-injected="" name="theme-color" content="black">
@@ -26,8 +27,17 @@
         embedded
         arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;"
       >
+        <a-marker preset='hiro'>
+          <a-entity
+          id="drone"
+          position="0 0 0"
+          scale="1 1 1"
+          gltf-model-next="src: url(./images/busterDrone.gltf);"
+          animation-mixer>
+          </a-entity>
+        </a-marker>
         <!-- we use cors proxy to avoid cross-origin problems -->
-        <a-nft
+        <!--a-nft
           type="nft"
           url="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/trex-image/trex"
           smooth="true"
@@ -36,11 +46,11 @@
           smoothThreshold="5"
           emitevents="true"
         >
-            <!--a-entity
+            <a-entity
               gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
               scale="5 5 5"
               position="50 150 0"
-            ></a-entity-->
+            ></a-entity>
             <a-entity
                 gltf-model=”src: url(/images/CUBE.gltf);”
                 id="drone"
@@ -48,7 +58,7 @@
                 scale="5 5 5"
             >
             </a-entity>
-        </a-nft>
+        </a-nft-->
         <a-entity camera></a-entity>
       </a-scene>
     </body>
