--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             <a-entity
             position="0 -1 0"
             scale="0.05 0.05 0.05"
-            gltf-model="images/busterDrone.gltf"
+            gltf-model="models/busterDrone.gltf"
             ></a-entity>
         </a-marker>
         <a-entity camera></a-entity>
