--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             <a-entity
                 position="0 -1 0"
                 scale="0.05 0.05 0.05"
-                gltf-model="models/glTF/CUBE/CUBE.gltf"
+                gltf-model="models/glTF/REUSE/REUSE.gltf"
             ></a-entity>
         </a-marker>
         <a-entity camera></a-entity>
