--- a/index.html
+++ b/index.html
@@ -1,17 +1,8 @@
 <html>
-    <head>
-        <title>RE</title>
-        <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
-        <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-        <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-    </head>
-
+    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <body>
-      <!-- minimal loader shown until image descriptors are loaded -->
-      <a-scene
-        embedded
-        arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
-      >
+      <a-scene embedded arjs>
         <a-marker preset="hiro">
             <a-entity
                 position="0 -1 0"
@@ -22,7 +13,5 @@
         <a-entity camera></a-entity>
       </a-scene>
     </body>
-
-    <script src="javascripts/app.js"></script>
 </html>
 
